Update programming corpus and retrain models

--- a/resources/CodEbot.ipynb
+++ b/resources/CodEbot.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,11 +127,14 @@
     "        return self._vectorizer.fit_transform(df)\n",
     "        \n",
     "    def transform_df(self, df):\n",
+    "        \"\"\"\n",
+    "        Vectorize Pandas DataFrame\n",
+    "        \"\"\"\n",
     "        return self._vectorizer.transform(df)\n",
     "        \n",
     "    def transform_text(self, text):\n",
     "        \"\"\"\n",
-    "        Transform single text.\n",
+    "        Vectorize text (string).\n",
     "        \"\"\"\n",
     "        return self._vectorizer.transform([text])[0]\n",
     "    \n",
@@ -166,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -206,27 +209,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>20</td>\n",
-       "      <td>info_author</td>\n",
-       "      <td>general</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ai là người làm ra bạn?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>info_codebot</td>\n",
-       "      <td>general</td>\n",
-       "      <td>0</td>\n",
-       "      <td>bạn là ai?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>49</td>\n",
-       "      <td>tip</td>\n",
-       "      <td>general</td>\n",
-       "      <td>1</td>\n",
-       "      <td>xin tip lập trình</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>113</td>\n",
        "      <td>apply</td>\n",
        "      <td>cpp</td>\n",
@@ -234,123 +216,144 @@
        "      <td>Khi nào chúng ta cần deep copy?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>37</td>\n",
-       "      <td>info_book</td>\n",
-       "      <td>general</td>\n",
+       "      <td>81</td>\n",
+       "      <td>apply</td>\n",
+       "      <td>cpp</td>\n",
        "      <td>1</td>\n",
-       "      <td>tôi có thể tìm tài liệu học lập trình ở đâu?</td>\n",
+       "      <td>Ứng dụng của mảng con trỏ?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>41</td>\n",
-       "      <td>set_context</td>\n",
-       "      <td>general</td>\n",
-       "      <td>0</td>\n",
-       "      <td>trợ giúp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>greeting</td>\n",
-       "      <td>general</td>\n",
-       "      <td>0</td>\n",
-       "      <td>chào bạn</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>149</td>\n",
-       "      <td>explain</td>\n",
-       "      <td>py</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Trong python, generator là gì?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>176</td>\n",
-       "      <td>agree</td>\n",
-       "      <td>general</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ok</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>129</td>\n",
+       "      <td>100</td>\n",
        "      <td>explain</td>\n",
        "      <td>cpp</td>\n",
        "      <td>1</td>\n",
-       "      <td>Namespace trong C++ là gì?</td>\n",
+       "      <td>Hàm tạo là gì?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>32</td>\n",
-       "      <td>info_book</td>\n",
+       "      <td>21</td>\n",
+       "      <td>info_author</td>\n",
        "      <td>general</td>\n",
-       "      <td>1</td>\n",
-       "      <td>sách học lập trình</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nhóm tác giả</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>144</td>\n",
-       "      <td>list</td>\n",
-       "      <td>py</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Python có những kiểu dữ liệu sẵn nào?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>159</td>\n",
+       "      <td>160</td>\n",
        "      <td>set_context</td>\n",
        "      <td>cpp</td>\n",
        "      <td>1</td>\n",
-       "      <td>C++ đang làm khó mình!</td>\n",
+       "      <td>C++ khó quá cậu ạ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>48</td>\n",
+       "      <td>51</td>\n",
        "      <td>tip</td>\n",
        "      <td>general</td>\n",
        "      <td>1</td>\n",
-       "      <td>mẹo lập trình</td>\n",
+       "      <td>tip hay trong lập trình</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>77</td>\n",
+       "      <td>68</td>\n",
        "      <td>compare</td>\n",
        "      <td>cpp</td>\n",
        "      <td>1</td>\n",
-       "      <td>Sự khác nhau giữa bộ nhớ stack và heap?</td>\n",
+       "      <td>Sự khác nhau giữa mảng và chuỗi?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>122</td>\n",
+       "      <td>compare</td>\n",
+       "      <td>cpp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>So sánh đa hình tĩnh và đa hình động?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>145</td>\n",
+       "      <td>reason</td>\n",
+       "      <td>py</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Vì sao biểu thức lambda không chứa câu lệnh?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>78</td>\n",
+       "      <td>compare</td>\n",
+       "      <td>cpp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sự khác nhau giữa hàm strdup() và strcpy()?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39</td>\n",
+       "      <td>info_book</td>\n",
+       "      <td>general</td>\n",
+       "      <td>1</td>\n",
+       "      <td>sách học lập trình tiếng việt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>172</td>\n",
+       "      <td>agree</td>\n",
+       "      <td>general</td>\n",
+       "      <td>0</td>\n",
+       "      <td>đồng ý</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>180</td>\n",
+       "      <td>agree</td>\n",
+       "      <td>general</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ừ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>164</td>\n",
+       "      <td>set_context</td>\n",
+       "      <td>py</td>\n",
+       "      <td>1</td>\n",
+       "      <td>mình có thắc mắc về python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>123</td>\n",
+       "      <td>explain</td>\n",
+       "      <td>cpp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ý nghĩa của hàm thuần ảo (pure virtual functio...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           intent  context  relevance  \\\n",
-       "20    info_author  general          0   \n",
-       "8    info_codebot  general          0   \n",
-       "49            tip  general          1   \n",
-       "113         apply      cpp          1   \n",
-       "37      info_book  general          1   \n",
-       "41    set_context  general          0   \n",
-       "4        greeting  general          0   \n",
-       "149       explain       py          1   \n",
-       "176         agree  general          0   \n",
-       "129       explain      cpp          1   \n",
-       "32      info_book  general          1   \n",
-       "144          list       py          1   \n",
-       "159   set_context      cpp          1   \n",
-       "48            tip  general          1   \n",
-       "77        compare      cpp          1   \n",
+       "          intent  context  relevance  \\\n",
+       "113        apply      cpp          1   \n",
+       "81         apply      cpp          1   \n",
+       "100      explain      cpp          1   \n",
+       "21   info_author  general          0   \n",
+       "160  set_context      cpp          1   \n",
+       "51           tip  general          1   \n",
+       "68       compare      cpp          1   \n",
+       "122      compare      cpp          1   \n",
+       "145       reason       py          1   \n",
+       "78       compare      cpp          1   \n",
+       "39     info_book  general          1   \n",
+       "172        agree  general          0   \n",
+       "180        agree  general          0   \n",
+       "164  set_context       py          1   \n",
+       "123      explain      cpp          1   \n",
        "\n",
-       "                                         question  \n",
-       "20                        ai là người làm ra bạn?  \n",
-       "8                                      bạn là ai?  \n",
-       "49                              xin tip lập trình  \n",
-       "113               Khi nào chúng ta cần deep copy?  \n",
-       "37   tôi có thể tìm tài liệu học lập trình ở đâu?  \n",
-       "41                                       trợ giúp  \n",
-       "4                                        chào bạn  \n",
-       "149                Trong python, generator là gì?  \n",
-       "176                                            ok  \n",
-       "129                    Namespace trong C++ là gì?  \n",
-       "32                             sách học lập trình  \n",
-       "144         Python có những kiểu dữ liệu sẵn nào?  \n",
-       "159                        C++ đang làm khó mình!  \n",
-       "48                                  mẹo lập trình  \n",
-       "77        Sự khác nhau giữa bộ nhớ stack và heap?  "
+       "                                              question  \n",
+       "113                    Khi nào chúng ta cần deep copy?  \n",
+       "81                          Ứng dụng của mảng con trỏ?  \n",
+       "100                                     Hàm tạo là gì?  \n",
+       "21                                        nhóm tác giả  \n",
+       "160                                  C++ khó quá cậu ạ  \n",
+       "51                             tip hay trong lập trình  \n",
+       "68                    Sự khác nhau giữa mảng và chuỗi?  \n",
+       "122              So sánh đa hình tĩnh và đa hình động?  \n",
+       "145       Vì sao biểu thức lambda không chứa câu lệnh?  \n",
+       "78         Sự khác nhau giữa hàm strdup() và strcpy()?  \n",
+       "39                       sách học lập trình tiếng việt  \n",
+       "172                                             đồng ý  \n",
+       "180                                                  ừ  \n",
+       "164                         mình có thắc mắc về python  \n",
+       "123  Ý nghĩa của hàm thuần ảo (pure virtual functio...  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,38 +379,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                                               xin chào\n",
-       "1                                         chào buổi sáng\n",
-       "2                                         chào buổi trưa\n",
-       "3                                          chào buổi tối\n",
-       "4                                               chào bạn\n",
-       "                             ...                        \n",
-       "674     Trong thực tế, điều này có nghĩa là chương tr...\n",
-       "675      Thí dụ: mã sau đây gây ra ứng xử không xác đ...\n",
-       "676     Mặc dù vậy, vì để cho phép trình dịch thực hi...\n",
-       "677     Một cách tổng quát, mọi sự diều chỉnh (hay th...\n",
-       "678                                                     \n",
-       "Length: 679, dtype: object"
+       "0                                                xin chào\n",
+       "1                                          chào buổi sáng\n",
+       "2                                          chào buổi trưa\n",
+       "3                                           chào buổi tối\n",
+       "4                                                chào bạn\n",
+       "                              ...                        \n",
+       "1359    Cách dùng biến __metaclass__ không còn được hỗ...\n",
+       "1360                                   Cú pháp bị loại bỏ\n",
+       "1361              Không còn dấu ``, thay vì đó, dùng repr\n",
+       "1362                       Không còn so sánh <> (dùng !=)\n",
+       "1363                       Không còn các lớp kiểu classic\n",
+       "Length: 1364, dtype: object"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "corpus_path = './data/programming_corpus'\n",
-    "corpus = []\n",
-    "with open(f'{corpus_path}/c.txt', 'r', encoding='utf-8') as f:\n",
-    "    c = pd.Series(f.read()[1:].replace('\\n', ' ').split('.'))\n",
+    "corpus = [X]\n",
+    "for name in ['c', 'cpp', 'py']:\n",
+    "    with open(f'{corpus_path}/{name}.txt', 'r', encoding='utf-8') as f:\n",
+    "        tmp = list(filter(lambda s: len(s) , f.read()[1:].replace('.', '\\n').split('\\n')))\n",
+    "        corpus.append(pd.Series(tmp))\n",
     "\n",
-    "tfidf_data = pd.concat((X,c), ignore_index=True)\n",
+    "tfidf_data = pd.concat(corpus, ignore_index=True)\n",
     "tfidf_data"
    ]
   },
@@ -420,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -444,16 +449,17 @@
        "['./model/preprocessing.bin']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tfidf__ngram_range = (1, 2)\n",
-    "tfidf__max_df = 0.5\n",
+    "tfidf__max_df = 0.3\n",
+    "tfidf__min_df = 0.003\n",
     "\n",
-    "preprocessor = Preprocessing(ngram_range=tfidf__ngram_range, max_df=tfidf__max_df)\n",
+    "preprocessor = Preprocessing(ngram_range=tfidf__ngram_range, max_df=tfidf__max_df, min_df=tfidf__min_df)\n",
     "preprocessor.fit(tfidf_data)\n",
     "\n",
     "preprocessor.save(\"./model/preprocessing.bin\")"
@@ -499,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -524,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -538,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -565,9 +571,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f1_score of TRAIN_intent: 1.0\n",
-      "f1_score of TEST_intent: 0.9\n",
-      "f1_score of TRAIN_context: 1.0\n",
+      "f1_score of TRAIN_intent: 0.9556962025316456\n",
+      "f1_score of TEST_intent: 0.9500000000000001\n",
+      "f1_score of TRAIN_context: 0.9936708860759493\n",
       "f1_score of TEST_context: 0.9500000000000001\n",
       "f1_score of TRAIN_relevance: 1.0\n",
       "f1_score of TEST_relevance: 0.975\n"
@@ -578,12 +584,12 @@
     "for column in [\"intent\", \"context\", \"relevance\"]:\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X_processed, y[column], test_size=0.2, random_state=46,stratify=y[column])\n",
     "    \n",
-    "    model = LinearSVC(C=0.8, random_state=46)\n",
+    "    model = LinearSVC(C=1, random_state=46)\n",
     "    model.fit(X_train, y_train)\n",
-    "\n",
+    "    \n",
     "    pred = model.predict(X_train)\n",
     "    pred_test = model.predict(X_test)\n",
-    "\n",
+    "    \n",
     "    print(f\"f1_score of TRAIN_{column}: {micro_f1_score(pred, y_train)}\")\n",
     "    print(f\"f1_score of TEST_{column}: {micro_f1_score(pred_test, y_test)}\")"
    ]
@@ -600,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -611,20 +617,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predict intent: 1.0\n",
-      "Predict context: 1.0\n",
-      "Predict relevance: 1.0\n"
+      "f1_score of ALLDATA_intent: 0.9595959595959596\n",
+      "f1_score of ALLDATA_context: 0.9949494949494949\n",
+      "f1_score of ALLDATA_relevance: 0.98989898989899\n"
      ]
     }
    ],
    "source": [
     "for column in [\"intent\", \"context\", \"relevance\"]:\n",
-    "    model = LinearSVC(C=0.8, random_state=46)\n",
+    "    model = LinearSVC(C=1, random_state=46)\n",
     "    model.fit(X_processed, y[column])\n",
     "\n",
     "    pred = model.predict(X_processed)\n",
     "\n",
-    "    print(f\"Predict {column}: {micro_f1_score(pred, y[column])}\")\n",
+    "    print(f\"f1_score of ALLDATA_{column}: {micro_f1_score(pred, y[column])}\")\n",
     "    \n",
     "    joblib.dump(model, f\"./model/model_{column}.bin\")"
    ]
