Make demo functional

--- a/resources/CodEbot.ipynb
+++ b/resources/CodEbot.ipynb
@@ -209,116 +209,116 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>322</td>\n",
-       "      <td>references</td>\n",
-       "      <td>cpp</td>\n",
-       "      <td>chia sẻ cho mình sách học lập trình C++ đi ạ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>agree</td>\n",
+       "      <td>51</td>\n",
+       "      <td>apply</td>\n",
        "      <td>general</td>\n",
-       "      <td>mình hiểu ra rồi</td>\n",
+       "      <td>python có ứng dụng gì?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>133</td>\n",
-       "      <td>define</td>\n",
-       "      <td>cpp</td>\n",
-       "      <td>Tôi muốn biết C++ có những kiểu dữ liệu cơ sở ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>363</td>\n",
-       "      <td>tip</td>\n",
-       "      <td>py</td>\n",
-       "      <td>chia sẻ mẹo python đi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>82</td>\n",
-       "      <td>compare</td>\n",
-       "      <td>cpp</td>\n",
-       "      <td>Trong C++, memcpy và strcpy khác nhau như thế ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>113</td>\n",
-       "      <td>credit_info</td>\n",
-       "      <td>general</td>\n",
-       "      <td>chức năng của codebot.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>264</td>\n",
-       "      <td>help</td>\n",
-       "      <td>general</td>\n",
-       "      <td>Hi codebot, tớ có thắc mắc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>112</td>\n",
-       "      <td>credit_info</td>\n",
-       "      <td>general</td>\n",
-       "      <td>cho tớ biết thêm về cậu đi codebot</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>329</td>\n",
-       "      <td>references</td>\n",
-       "      <td>cpp</td>\n",
-       "      <td>sách dạy C++ có không?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>146</td>\n",
-       "      <td>define</td>\n",
-       "      <td>cpp</td>\n",
-       "      <td>Namespace trong C++ là gì?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>163</td>\n",
-       "      <td>define</td>\n",
-       "      <td>general</td>\n",
-       "      <td>Mảng con trỏ là gì thế codebot?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>77</td>\n",
-       "      <td>compare</td>\n",
-       "      <td>cpp</td>\n",
-       "      <td>Cho biết sự khác nhau giữa việc #include và #i...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>318</td>\n",
+       "      <td>328</td>\n",
        "      <td>other</td>\n",
        "      <td>general</td>\n",
-       "      <td>trong trường hợp nào thì mình nên nghỉ học?</td>\n",
+       "      <td>thất tình thì làm gì?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>70</td>\n",
-       "      <td>apply</td>\n",
-       "      <td>py</td>\n",
-       "      <td>Kiểu từ điển trong python dùng để làm gì?</td>\n",
+       "      <td>302</td>\n",
+       "      <td>other</td>\n",
+       "      <td>general</td>\n",
+       "      <td>a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>123</td>\n",
+       "      <td>170</td>\n",
+       "      <td>define</td>\n",
+       "      <td>general</td>\n",
+       "      <td>Hàm tạo copy là gì?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>229</td>\n",
+       "      <td>disagree</td>\n",
+       "      <td>general</td>\n",
+       "      <td>ý tôi không phải vậy mà</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>253</td>\n",
+       "      <td>help</td>\n",
+       "      <td>cpp</td>\n",
+       "      <td>mình có câu hỏi về C++</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>346</td>\n",
+       "      <td>references</td>\n",
+       "      <td>cpp</td>\n",
+       "      <td>có tài liệu C++ không?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>266</td>\n",
+       "      <td>help</td>\n",
+       "      <td>general</td>\n",
+       "      <td>codebot, hãy giúp tôi với</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>167</td>\n",
+       "      <td>define</td>\n",
+       "      <td>general</td>\n",
+       "      <td>Alignment struct là gì?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>298</td>\n",
+       "      <td>other</td>\n",
+       "      <td>general</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>131</td>\n",
        "      <td>credit_info</td>\n",
        "      <td>general</td>\n",
-       "      <td>hãy giới thiệu thêm về bản thân đi codebot</td>\n",
+       "      <td>nhóm tác giả</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>214</td>\n",
+       "      <td>disagree</td>\n",
+       "      <td>general</td>\n",
+       "      <td>Không, tôi không hiểu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>252</td>\n",
+       "      <td>help</td>\n",
+       "      <td>cpp</td>\n",
+       "      <td>đang đau đầu vì C++ đây</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>232</td>\n",
+       "      <td>greeting</td>\n",
+       "      <td>general</td>\n",
+       "      <td>codebot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>263</td>\n",
+       "      <td>help</td>\n",
+       "      <td>cpp</td>\n",
+       "      <td>xin chào, Tớ cần giúp đỡ về C++</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          intent  context                                           question\n",
-       "322   references      cpp       chia sẻ cho mình sách học lập trình C++ đi ạ\n",
-       "11         agree  general                                   mình hiểu ra rồi\n",
-       "133       define      cpp  Tôi muốn biết C++ có những kiểu dữ liệu cơ sở ...\n",
-       "363          tip       py                              chia sẻ mẹo python đi\n",
-       "82       compare      cpp  Trong C++, memcpy và strcpy khác nhau như thế ...\n",
-       "113  credit_info  general                             chức năng của codebot.\n",
-       "264         help  general                         Hi codebot, tớ có thắc mắc\n",
-       "112  credit_info  general                 cho tớ biết thêm về cậu đi codebot\n",
-       "329   references      cpp                             sách dạy C++ có không?\n",
-       "146       define      cpp                         Namespace trong C++ là gì?\n",
-       "163       define  general                    Mảng con trỏ là gì thế codebot?\n",
-       "77       compare      cpp  Cho biết sự khác nhau giữa việc #include và #i...\n",
-       "318        other  general        trong trường hợp nào thì mình nên nghỉ học?\n",
-       "70         apply       py          Kiểu từ điển trong python dùng để làm gì?\n",
-       "123  credit_info  general         hãy giới thiệu thêm về bản thân đi codebot"
+       "          intent  context                         question\n",
+       "51         apply  general           python có ứng dụng gì?\n",
+       "328        other  general            thất tình thì làm gì?\n",
+       "302        other  general                                a\n",
+       "170       define  general              Hàm tạo copy là gì?\n",
+       "229     disagree  general          ý tôi không phải vậy mà\n",
+       "253         help      cpp           mình có câu hỏi về C++\n",
+       "346   references      cpp           có tài liệu C++ không?\n",
+       "266         help  general        codebot, hãy giúp tôi với\n",
+       "167       define  general          Alignment struct là gì?\n",
+       "298        other  general                               10\n",
+       "131  credit_info  general                     nhóm tác giả\n",
+       "214     disagree  general            Không, tôi không hiểu\n",
+       "252         help      cpp          đang đau đầu vì C++ đây\n",
+       "232     greeting  general                          codebot\n",
+       "263         help      cpp  xin chào, Tớ cần giúp đỡ về C++"
       ]
      },
      "execution_count": 3,
@@ -355,16 +355,16 @@
       "text/plain": [
        "0                                        cậu biết ý tớ đó\n",
        "1                              câu trả lời thật là bổ ích\n",
-       "2                              câu trả lời thật là bổ ích\n",
+       "2                         câu trả lời thật là bổ ích đó ạ\n",
        "3                                                   chuẩn\n",
        "4                                   chuẩn không cần chỉnh\n",
        "                              ...                        \n",
-       "1530    Cách dùng biến __metaclass__ không còn được hỗ...\n",
-       "1531                                   Cú pháp bị loại bỏ\n",
-       "1532              Không còn dấu ``, thay vì đó, dùng repr\n",
-       "1533                       Không còn so sánh <> (dùng !=)\n",
-       "1534                       Không còn các lớp kiểu classic\n",
-       "Length: 1535, dtype: object"
+       "1550    Cách dùng biến __metaclass__ không còn được hỗ...\n",
+       "1551                                   Cú pháp bị loại bỏ\n",
+       "1552              Không còn dấu ``, thay vì đó, dùng repr\n",
+       "1553                       Không còn so sánh <> (dùng !=)\n",
+       "1554                       Không còn các lớp kiểu classic\n",
+       "Length: 1555, dtype: object"
       ]
      },
      "execution_count": 4,
@@ -539,71 +539,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "micro f1_score of TRAIN_intent: 0.9932203389830508\n",
+      "micro f1_score of TRAIN_intent: 0.9967845659163987\n",
       "classification_report of TRAIN intent:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "       agree       1.00      0.97      0.98        29\n",
-      "       apply       1.00      1.00      1.00        30\n",
-      "     compare       1.00      1.00      1.00        26\n",
-      " credit_info       1.00      1.00      1.00        20\n",
-      "      define       0.97      1.00      0.99        38\n",
+      "       apply       1.00      1.00      1.00        34\n",
+      "     compare       1.00      1.00      1.00        27\n",
+      " credit_info       1.00      1.00      1.00        19\n",
+      "      define       1.00      1.00      1.00        49\n",
       "    disagree       1.00      1.00      1.00        26\n",
-      "    greeting       1.00      1.00      1.00        11\n",
+      "    greeting       1.00      1.00      1.00        14\n",
       "        help       1.00      1.00      1.00        41\n",
-      "       other       0.97      0.97      0.97        37\n",
+      "       other       0.97      1.00      0.99        35\n",
       "  references       1.00      1.00      1.00        23\n",
       "         tip       1.00      1.00      1.00        14\n",
       "\n",
-      "    accuracy                           0.99       295\n",
-      "   macro avg       1.00      0.99      0.99       295\n",
-      "weighted avg       0.99      0.99      0.99       295\n",
+      "    accuracy                           1.00       311\n",
+      "   macro avg       1.00      1.00      1.00       311\n",
+      "weighted avg       1.00      1.00      1.00       311\n",
       "\n",
-      "micro f1_score of TEST_intent: 0.9324324324324325\n",
+      "micro f1_score of TEST_intent: 0.9358974358974359\n",
       "\n",
       "classification_report of TEST intent:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "       agree       1.00      1.00      1.00         7\n",
-      "       apply       1.00      1.00      1.00         8\n",
-      "     compare       1.00      1.00      1.00         6\n",
+      "       apply       1.00      0.78      0.88         9\n",
+      "     compare       1.00      0.86      0.92         7\n",
       " credit_info       1.00      1.00      1.00         5\n",
-      "      define       0.90      0.90      0.90        10\n",
-      "    disagree       0.86      1.00      0.92         6\n",
+      "      define       0.75      1.00      0.86        12\n",
+      "    disagree       1.00      1.00      1.00         6\n",
       "    greeting       1.00      1.00      1.00         3\n",
-      "        help       0.77      1.00      0.87        10\n",
-      "       other       1.00      0.56      0.71         9\n",
-      "  references       1.00      1.00      1.00         6\n",
+      "        help       1.00      0.80      0.89        10\n",
+      "       other       1.00      1.00      1.00         9\n",
+      "  references       0.86      1.00      0.92         6\n",
       "         tip       1.00      1.00      1.00         4\n",
       "\n",
-      "    accuracy                           0.93        74\n",
-      "   macro avg       0.96      0.95      0.95        74\n",
-      "weighted avg       0.94      0.93      0.93        74\n",
+      "    accuracy                           0.94        78\n",
+      "   macro avg       0.96      0.95      0.95        78\n",
+      "weighted avg       0.95      0.94      0.94        78\n",
       "\n",
       "micro f1_score of TRAIN_context: 1.0\n",
       "classification_report of TRAIN context:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         cpp       1.00      1.00      1.00        74\n",
-      "     general       1.00      1.00      1.00       169\n",
-      "          py       1.00      1.00      1.00        52\n",
+      "         cpp       1.00      1.00      1.00        72\n",
+      "     general       1.00      1.00      1.00       188\n",
+      "          py       1.00      1.00      1.00        51\n",
       "\n",
-      "    accuracy                           1.00       295\n",
-      "   macro avg       1.00      1.00      1.00       295\n",
-      "weighted avg       1.00      1.00      1.00       295\n",
+      "    accuracy                           1.00       311\n",
+      "   macro avg       1.00      1.00      1.00       311\n",
+      "weighted avg       1.00      1.00      1.00       311\n",
       "\n",
-      "micro f1_score of TEST_context: 0.9864864864864865\n",
+      "micro f1_score of TEST_context: 0.9871794871794872\n",
       "\n",
       "classification_report of TEST context:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         cpp       1.00      0.95      0.97        19\n",
-      "     general       0.98      1.00      0.99        42\n",
+      "         cpp       1.00      0.94      0.97        18\n",
+      "     general       0.98      1.00      0.99        47\n",
       "          py       1.00      1.00      1.00        13\n",
       "\n",
-      "    accuracy                           0.99        74\n",
-      "   macro avg       0.99      0.98      0.99        74\n",
-      "weighted avg       0.99      0.99      0.99        74\n",
+      "    accuracy                           0.99        78\n",
+      "   macro avg       0.99      0.98      0.99        78\n",
+      "weighted avg       0.99      0.99      0.99        78\n",
       "\n"
      ]
     }
@@ -647,7 +647,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f1_score of AllData_intent: 0.997289972899729\n",
+      "f1_score of AllData_intent: 0.9974293059125964\n",
       "f1_score of AllData_context: 1.0\n"
      ]
     }
