--- a/resources/CodEbot.ipynb
+++ b/resources/CodEbot.ipynb
@@ -618,10 +618,10 @@
     "    pred = model.predict(X_train)\n",
     "    pred_test = model.predict(X_test)\n",
     "    \n",
-    "    print(f\"micro f1_score of TRAIN_{column}: {micro_f1_score(pred, y_train)}\")\n",
-    "    print(f\"classification_report of TRAIN {column}:\\n{classification_report(y_train, pred, labels=model.classes_)}\")\n",
+    "    print(f\"micro f1_score of TRAIN_{column}:{micro_f1_score(pred, y_train)}\\n\")\n",
+    "    print(f\"classification_report of TRAIN_{column}:\\n{classification_report(y_train, pred, labels=model.classes_)}\")\n",
     "    print(f\"micro f1_score of TEST_{column}: {micro_f1_score(pred_test, y_test)}\\n\")\n",
-    "    print(f\"classification_report of TEST {column}:\\n{classification_report(y_test, pred_test, labels=model.classes_)}\")"
+    "    print(f\"classification_report of TEST_{column}:\\n{classification_report(y_test, pred_test, labels=model.classes_)}\")"
    ]
   },
   {
@@ -687,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
